[project]
name = "skill-arbiter"
version = "0.2.16"
description = "Admit or quarantine Codex skills by detecting persistent rg.exe churn on Windows hosts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Edward Silvia" }]
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
