[project]
name = "skill-arbiter"
version = "0.2.21"
description = "Local NullClaw host security app for skill governance, threat suppression, and self-governance on Windows hosts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Edward Silvia" }]
dependencies = ["pywebview>=5.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
