[project]
name = "skill-arbiter"
version = "0.2.25"
description = "Local NullClaw host security app for skill governance, threat suppression, and self-governance on Windows hosts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
dependencies = ["pywebview>=5.0", "psutil>=5.9"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = [".tmp", "evidence"]
